@@ -1,30 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST thai-ttf-0.4.13.tar.gz 2917540 SHA256 932cdebdac59e9febbda8d7cd9b2a56e15c045362c8821345a9791807e5d5748 SHA512 1b57d8222836323ab1fc885bf4a2f64e28534869f1bbf427eaa7668c6eff9b61d7a5ad3fb7b31657a6f4867b758059ab6e793181e3f11c9d55dd12999d2d37bf WHIRLPOOL ff711dd4c9b0bd78d1165e2c537feb702d0f686941f01669ae75b54d7b38ba72686d40383f1878aac3ee4cc0c3befcf942db6bbb004666e0429b6da2a1728a2a
-DIST thai-ttf-0.4.17.tar.gz 2941878 SHA256 1b5b49a09267504d3aa0cc544c93f2498b3d8d1418d58eb43f262c11a03ccbec SHA512 68a8a2f783f33d6b2aceda5c5e5bd21843aea23ddcad8ee057d5d5643b1de0f09d0917a3c35fda58eec0a205b0bbc734f9a0c6be037bb21852ac93b619907b40 WHIRLPOOL 611f9c288ec9343a88be529a762a5bc4f0a0e7903bbd17b99ef371cf010ec97cc4545c2237e4d07a8307899fabc537cc0b68cddb3e27661e8756c028e54479ca
 DIST ttf-tlwg-0.6.1.tar.xz 1931628 SHA256 aa9cd68969b6f704df3e5b1a2e11204c47f118c8ab052f04c111bd5f299f77c8 SHA512 47364c9125509eb115abdaa60eb1f046d5bef694b2b51113e611b1c35c50300d682fc35c71e16ab3d6ffb43f36ba3e77af70019ec050012aebe04d9c0ece544f WHIRLPOOL 35a628bbc800dc1151a6e95604459ae77bb4a84cf91f17b6c78b8e80f162fcff69d8663b08de789b7fbed9b749bcf671204059a344c7b5afebd72aa6b35a8b1a
-EBUILD thaifonts-scalable-0.4.13.ebuild 981 SHA256 4d2014476663ef6fc4ba3e4f62a4cb44e35a89e7b82c89dde051d9bb92ad7b73 SHA512 3aabfffd5f3e1a371a024b07cffc9890e39af4a110c36d5c03aef617bf108bdeeb18a050446badeb0c6815c67ff7872d42b4e1e5a65dd26b9c86545ab287486e WHIRLPOOL 35f2e8a0bf9c8d051132e0574a0d77d47b5a0061022e27167ec38ce4a1e80cfa78686d94ef22ade69e078b0dc36e2d564fdd8acfa9f81f29d942e529ae30ede4
-EBUILD thaifonts-scalable-0.4.17.ebuild 976 SHA256 29c8e949581c8aae741d62e332a6af66dbbd4f7e217ce5cab7ed092dd965510a SHA512 3f686063b24ab69f2d8defdaf49142808a939eac170310ae1d1e9ea84374414edb5b534e620c1e00018bef1421977cc03ad2110fcbfff82165331a7412ad60d8 WHIRLPOOL 24a7db3f7984c185dc414a40b7cc92565df00bf0c35fb7fbaa35fca284b49f010bc46ef7abc22a9ad141011b77f1181572dda5891edf84929f3e9eacb21da567
-EBUILD thaifonts-scalable-0.6.1.ebuild 1749 SHA256 e08c8a9a847ade7c92b18bf30978e4ce8eceb0bf9a1850b221d0d0985d0208e8 SHA512 36868b36ead19ab3e8f28dc49c17ea17d0a29f515bcc0223969f5a8d10739eff552422698db2e6a28107705d7edcfbe3f96cd2a076db0ea94973bcbc72512ac1 WHIRLPOOL 728391907dd97f73e2f123ee4a2abf7d8f61272eb16ff9a73e2a905774e742918b83a0d0aefbd5aa68b55211f08251364c29964779caf62df6a69479c93c1734
-MISC ChangeLog 2125 SHA256 8ebce9c253c911f39e0a5cbc1f2df9661f19d4d9d65d5b562fdecd16e59b6e1e SHA512 55f5d265448edb67009ead11749cb192b4d8f07cbf10e0225b67687f9588db4505eb4658522183b9bcbee258e38cad0546d711030287f75985d37f23ee0d5b55 WHIRLPOOL ed98501c1e98c53b995a6806ebc74a73048612b0a8082f426a725318cb17da1162e37adf290ab34a1fdb74aab768fb16d20402cf4d2e1719519df213710b3683
+EBUILD thaifonts-scalable-0.6.1.ebuild 1747 SHA256 47da4b2b1d795ded8db1d469cb66a9a95565b46c340aede04182a1e811667367 SHA512 6b8f079d374bca245eb22fb2eb5592a4bb3f24f75a0290d2539f3e31dd5e4e4ff95fb464d5a18c80f244bd0a68e56d6d8508bed1dc716b049020991d87dd5c8e WHIRLPOOL 7fc538b68b93c61d70945a9a5ae241f0d55388e2bbe3f294605a32fc64f36fbe2713d9417dde1e1570ce9580cfb9f7487275877b07cc55e8a43f8538dce6e8f2
+MISC ChangeLog 2331 SHA256 67feaf3dc826daf44f1d38d5fb582d677a163f65545bcc015a2d2861cf75ab88 SHA512 c50197c64e6298918d25d7f276c67ac0d47bfb8c0596bd05b34f6a32c430329f90d02e2cef2702b46aaceb4532aca0ba37e63c77b1fe2d98fe8134457e884089 WHIRLPOOL 7698524b8283506c6961512a1ecb7864ef8d15d95aa33c1c4d9b46d8cfa40fc78b490efc6b52c944c9edfe3e49573dcec33ab02e4d538a61dd6d58cbe8f7115d
 MISC metadata.xml 160 SHA256 f98af670c6967591fe20a2cf4ef27d68f8b6dfb2799f8a4cc051003f5c95f7c0 SHA512 309b994cd299c4e1e99212e9f531f63773f48b1255b1c5518f5f7c61f245045c579a7854b481c9b7ffdd79f7e71c417bfdd353ed6431903288a40e2e357b19ad WHIRLPOOL fc94ab822cf0a7455b83c600ee9333f3ad6a683f71bb17b33a21dc86d25dafa060192d7576a849668bb3f88b46f3ff7422a4d06830154bd33540a9f7a50bc1d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVIT04XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVJTUqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
-RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOcpoP/2PSAA/1awkA8q6FKaKeO4W6
-nSQectwFiLLyxsuUlSWD8bqz/Zih/6PVinYGoQwBQCsz8wMaI1gHz6JCY+/65kgF
-Gs0COkCcVD90l/xPbvG3FzY3Ssx+Zi1p28IRrcPHwsEH0R7AEQ6HocL/ISfSxp1x
-zmmoXjm94HJA9ZQ3fK/PRgPioL6oTaJtF3yRGfzrVNmr2P5Aem+77GzjRuTjzlbn
-EJc6H7NubS4JekSnco3VdJQSq8X2RJXFRXrpBouLBgQhSgNqn2fJLkuT5eUszTNH
-CMIbbDTwjwxftEUIDPwHLC63i6LL5ZaGs6GndLIiwbDD6THM1ADYM6+FA4XcCtLP
-trJsw9FNfHstVwL9AH/r3yPeSL9gqi415a9A2Ft8NdsMeNzrQJRVGgJRQbseEFuK
-GaYd4xuYjhGxOqb+U7FZu59Ur86stOW6wYrI4kdbbUWIQMUF+4MXAxdGj9XOIN/X
-dtfRZ4K1teFwBt1yE1STQ9kluLKwt86UzC7Myz1X1Ybn9e8HkMgpjLZtZNdHrmrx
-YBRXMJKHz8pWo2zi3JRMlQsqokzVNma6EzsOzKWwkZ5aFIlmmFBa+TkAIA1IKyBE
-VP7MmqkakMeEjE2JcPRXcxYGqp3s0s5gSCNHofSskpd9/kAnmP07BQnKB1bPsv9j
-snWGkEaKiyc4bOHnDy4a
-=eZxv
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFO8MAP/infpJJjkkY+ioohFZgkL269
+yHFw7DYriIPjohY2SPLDI2AonTxRG3ZUPh2bfFAnUpRnWtPr8VLZQk3th+7iQWDr
+67sjZns90pTwMU8KKjoP/mMOVKcjKa1NoCsd5+YiBuy1yYa/o5McX6CdqOiFHnTY
+mwN4mgDWUxfAn9vGCoxYN8Bn3tR/tuMTQNZKaohNvJGvS9NaQpyEMDG5NlGgzWAM
+6w/7ChabI86dGX5MsboRnqSqCP3yNR3nD5DA0jnwAXU/emKaQIP5itrvEkznIApA
+UYwCR77uZzDSa3v+nCe2B706SfMSNwtlaCPMGc5TdHcRfAHR3lvExLCkVnK3fgFP
+1oIF1eoerdTGP7aA3dy1HjxHLuwWfqXUdgNH0C5d2PN7Oh7G//eCHXXfLDhWsqpx
+vb4ML6Oe3mtfNXBJ8W0AAE7IodDBGxaqdhNV61yf/efTvzk5OZo/1gJpFx+M+hoE
+Fu+0uWs/TOlb0e1lJv0H2keMGhTNUPn3TiEX0Ef5KryJ5ADcAvMp8UiKTV4+xCoj
+fS9/C/ty1/K0yNZymj1M+8c+ITmYk6Pb0HK/duzEkg4LDwpStIdlK5qZ5XnxA2xn
+hNCmp+StpKnyjD1NiMWWkpYnX9xN84YrC+WfDLoVb/FXJzT/4ZSM04uejcE/YVEH
+fx1yaa+n8skqy036b0/+
+=MyEF
 -----END PGP SIGNATURE-----
